--- a/Quotidian.Diagnostics.Source/Quotidian.Diagnostics.Source.csproj
+++ b/Quotidian.Diagnostics.Source/Quotidian.Diagnostics.Source.csproj
@@ -2,6 +2,15 @@
 
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
+    <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
+    <PackageId>qdx</PackageId>
+    <Authors>Landon</Authors>
+    <Company />
+    <PackageLicenseExpression>MIT</PackageLicenseExpression>
+    <Description>Everyday diagnostics for every day.</Description>
+    <PackageProjectUrl>https://github.com/eisenpony/qDx</PackageProjectUrl>
+    <RepositoryUrl>https://github.com/eisenpony/qDx</RepositoryUrl>
+    <Version>1.0.1</Version>
   </PropertyGroup>
 
 </Project>
