--- a/Quotidian.Diagnostics.Tests/Quotidian.Diagnostics.Tests.csproj
+++ b/Quotidian.Diagnostics.Tests/Quotidian.Diagnostics.Tests.csproj
@@ -1,10 +1,20 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>netcoreapp2.0</TargetFramework>
+    <TargetFramework>netcoreapp2.1</TargetFramework>
 
     <IsPackable>false</IsPackable>
   </PropertyGroup>
+
+  <ItemGroup>
+    <None Remove="ExpectedToTrace.txt" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Content Include="ExpectedToTrace.txt">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+  </ItemGroup>
 
   <ItemGroup>
     <PackageReference Include="moq" Version="4.10.1" />
