--- a/Quotidian.Diagnostics/Quotidian.Diagnostics.csproj
+++ b/Quotidian.Diagnostics/Quotidian.Diagnostics.csproj
@@ -10,11 +10,9 @@
     <Description>Everyday diagnostics for every day.</Description>
     <PackageProjectUrl>https://github.com/eisenpony/qDx</PackageProjectUrl>
     <RepositoryUrl>https://github.com/eisenpony/qDx</RepositoryUrl>
-    <Version>2.0</Version>
-    <PackageReleaseNotes>Multitarget .net standard 1.0 and 2.0
-Remove error code as required field from Domain extension methods
-Reorder some parameters for consistency
-Added CompositeTrace for conveniently combining trace implementations</PackageReleaseNotes>
+    <Version>2.0.1</Version>
+    <PackageReleaseNotes>Fixup the formatting from ExceptionExtenstion ToTrace
+Correct namespaces in Test project</PackageReleaseNotes>
     <PackageTags>Diagnostics Logging</PackageTags>
     <RepositoryType>git</RepositoryType>
   </PropertyGroup>
